Fix issue with adblock by changing name of folder storing images. Also, fix css where float on img was causing alignment issues.

--- a/css/print_pages.css
+++ b/css/print_pages.css
@@ -4,6 +4,4 @@
 
 .description p {margin: 0px 200px 15px 0px; }
 
-img {float: left; }
-
 .samples img {margin: 0px 0px 3px 3px; }
